[gd_scene load_steps=30 format=2]

[ext_resource path="res://scripts/Player 1.gd" type="Script" id=1]
[ext_resource path="res://sprites/player/down/2.png" type="Texture" id=2]
[ext_resource path="res://scenes/other scenes/Camera2D.tscn" type="PackedScene" id=3]
[ext_resource path="res://sprites/player/down/3.png" type="Texture" id=4]
[ext_resource path="res://sprites/player/down/1.png" type="Texture" id=5]
[ext_resource path="res://sprites/player/right/2.png" type="Texture" id=6]
[ext_resource path="res://sprites/player/right/1.png" type="Texture" id=7]
[ext_resource path="res://sprites/player/left/1.png" type="Texture" id=8]
[ext_resource path="res://sprites/player/right/3.png" type="Texture" id=9]
[ext_resource path="res://sprites/player/left/2.png" type="Texture" id=10]
[ext_resource path="res://sprites/player/left/3.png" type="Texture" id=11]
[ext_resource path="res://sprites/player/up/3.png" type="Texture" id=12]
[ext_resource path="res://sprites/player/up/2.png" type="Texture" id=13]
[ext_resource path="res://sprites/player/up/1.png" type="Texture" id=14]
[ext_resource path="res://sprites/UI/bar_v3.png" type="Texture" id=15]
[ext_resource path="res://sprites/UI/bar_v2.png" type="Texture" id=16]
[ext_resource path="res://sprites/UI/bar_v4.png" type="Texture" id=17]
[ext_resource path="res://scripts/UI/TextureProgress.gd" type="Script" id=18]
[ext_resource path="res://sprites/player/magic/fire/fire_2.png" type="Texture" id=19]
[ext_resource path="res://sprites/player/magic/fire/fire_1.png" type="Texture" id=20]
[ext_resource path="res://sprites/player/magic/fire/fire_3.png" type="Texture" id=21]
[ext_resource path="res://sprites/player/2035166.png" type="Texture" id=22]
[ext_resource path="res://sprites/player/magic/fire/fire_cast_1.png" type="Texture" id=23]
[ext_resource path="res://style/theme/main_theme.tres" type="Theme" id=24]
[ext_resource path="res://scripts/shadow.gd" type="Script" id=25]
[ext_resource path="res://scenes/Pause.tscn" type="PackedScene" id=26]
[ext_resource path="res://sprites/nature/rain/rain_1.png" type="Texture" id=27]

[sub_resource type="CapsuleShape2D" id=3]
radius = 2.99999
height = 10.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 20 ), ExtResource( 19 ), ExtResource( 21 ) ],
"loop": false,
"name": "Fire",
"speed": 5.0
}, {
"frames": [ ExtResource( 23 ) ],
"loop": false,
"name": "Magic_cast",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 2 ), ExtResource( 4 ) ],
"loop": true,
"name": "down",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "left",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 6 ), ExtResource( 9 ) ],
"loop": true,
"name": "right",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "stay",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 13 ), ExtResource( 12 ) ],
"loop": true,
"name": "up",
"speed": 5.0
} ]

[node name="Player1" type="KinematicBody2D"]
light_mask = 4
collision_layer = 4
collision_mask = 24
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 4
position = Vector2( -1, -1 )
rotation = -1.57079
shape = SubResource( 3 )

[node name="Camera2D" parent="." instance=ExtResource( 3 )]
current = true
smoothing_enabled = true
smoothing_speed = 7.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CPUParticles2D" type="CPUParticles2D" parent="CanvasLayer"]
visible = false
position = Vector2( -17, -61 )
rotation = -0.420663
amount = 600
lifetime = 1.5
texture = ExtResource( 27 )
emission_shape = 2
emission_rect_extents = Vector2( 800, 700 )
gravity = Vector2( 0, 1000 )
initial_velocity = 20.0
initial_velocity_random = 1.0
scale_amount = 2.0
color = Color( 0.333333, 0.462745, 0.494118, 1 )

[node name="TextureProgress" type="TextureProgress" parent="CanvasLayer"]
margin_left = 64.0
margin_top = 530.0
margin_right = 80.0
margin_bottom = 594.0
rect_rotation = 180.0
rect_scale = Vector2( -2.5, 2.5 )
step = 0.2
value = 100.0
texture_under = ExtResource( 15 )
texture_over = ExtResource( 16 )
texture_progress = ExtResource( 17 )
fill_mode = 2
script = ExtResource( 18 )

[node name="Label" type="Label" parent="CanvasLayer"]
visible = false
margin_left = 857.0
margin_top = 569.0
margin_right = 1013.0
margin_bottom = 594.0
theme = ExtResource( 24 )

[node name="TextureProgress2" type="TextureProgress" parent="CanvasLayer"]
margin_left = 900.0
margin_top = 530.0
margin_right = 916.0
margin_bottom = 594.0
rect_rotation = 180.0
rect_scale = Vector2( -2.5, 2.5 )
step = 0.05
value = 100.0
texture_under = ExtResource( 15 )
texture_over = ExtResource( 16 )
texture_progress = ExtResource( 17 )
fill_mode = 2

[node name="Pause" parent="CanvasLayer" instance=ExtResource( 26 )]
visible = false

[node name="Hand" type="Node2D" parent="."]
position = Vector2( 9, -15 )

[node name="Timer" type="Timer" parent="."]

[node name="shadow" type="Sprite" parent="."]
position = Vector2( -0.5, -1 )
scale = Vector2( 0.0205078, 0.0128082 )
texture = ExtResource( 22 )
script = ExtResource( 25 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 3, -22 )
frames = SubResource( 2 )
animation = "stay"
playing = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
